--- a/index.html
+++ b/index.html
@@ -12,29 +12,27 @@
   <div class="slider-container">
     <div class="left-slide">
       <div style="background-color:#fd3555">
-        <h1>Nature flower </h1>
+        <h1>Nature flower</h1>
         <p>All pink</p>
       </div>
-      <div style="background-color:#2a86ba">
-        <h1>Deep Blue Sky </h1>
+      <div style="background-color:#7b97a7">
+        <h1>Deep Sky </h1>
         <p>In the Mountains</p>
       </div>
-      <div style="background-color:#252E33">
+      <div style="background-color:#707a7e">
         <h1>Lonely castle </h1>
         <p>In the wilderness</p>
       </div>
-      <div style="background-color:#ffb866">
+      <div style="background-color:#6b553c">
         <h1>Flying eagle </h1>
         <p>In the sunset</p>
       </div>
     </div>
     <div class="right-slide">
-      <div style="background-image: url(./img/flower.jpg)"></div>
-      <div style="background-image: url(./img/sky-mountains.jpg)"></div>
-      <div style="background-image: url(./img/castle.jpg)"></div>
       <div style="background-image: url(./img/eagle.jpg)"></div>
-      
-      
+      <div style="background-image: url(./img/castle.jpg)"></div>
+      <div style="background-image: url(./img/sky-mountains.jpg)"></div>
+      <div style="background-image: url(./img/flower.jpg)"></div>
     </div>
     <div class="action-buttons">
       <button class="down-button">
