--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
   <div class="slider-container">
     <div class="left-slide">
-      <div style="background-color:#fd3555">
+      <div style="background-color:#c99aa3">
         <h1>Nature flower</h1>
         <p>All pink</p>
       </div>
-      <div style="background-color:#7b97a7">
+      <div style="background-color:#98819e">
         <h1>Deep Sky </h1>
         <p>In the Mountains</p>
       </div>
@@ -23,7 +23,7 @@
         <h1>Lonely castle </h1>
         <p>In the wilderness</p>
       </div>
-      <div style="background-color:#6b553c">
+      <div style="background-color:#e07749">
         <h1>Flying eagle </h1>
         <p>In the sunset</p>
       </div>
